packages/layout/src/sidebar/Sidebar.module.css
.sidebar {
  background-color: var(--midas-background-base);
  border-right: 1px solid var(--midas-border-color-subtle);
  flex-shrink: 0;
  transition: width var(--midas-transition-duration-fast) ease-out;
  width: 15rem;

  &.collapsed {
    width: calc(32px + 48px);
  }

  @media (width <= 640px) {
    display: none;
  }
}

.sidebarHeader {
  gap: 0;

  &.collapsed {
    justify-content: center;
    padding: var(--midas-space-small);
  }
}

.sidebarTitle {
  display: block;
  font-size: var(--midas-typography-font-size-20);
  height: auto;
  interpolate-size: allow-keywords;
  opacity: 1;
  overflow: hidden;
  transition:
    display var(--midas-transition-duration-fast) allow-discrete,
    height var(--midas-transition-duration-fast) ease-out,
    opacity var(--midas-transition-duration-instant) ease-out;

  @starting-style {
    height: 0;
    opacity: 0;
  }

  &.collapsed {
    display: none;
    height: 0;
    opacity: 0;
  }
}

.sidebarContent {
  padding: var(--midas-space-small);
}

